--- a/docker/backend/simple-api-student-main/src/main/resources/application.yml
+++ b/docker/backend/simple-api-student-main/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     generate-ddl: false
     open-in-view: true
   datasource:
-    url: jdbc:postgresql://myfirstpostgres:5432/db
-    username: usr
-    password: pwd
+    url: jdbc:postgresql://${POSTGRES_URL}/${POSTGRES_DB}
+    username: ${POSTGRES_USR}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 management:
  server:
