--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-
+          distribution: 'adopt'
+          
       - name: Build and test with Maven
-        run: mvn clean install --file ./docker/backend/simple-api-student-main/
+        run: mvn clean install
