--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,4 +21,4 @@ jobs:
           distribution: 'adopt'
           
       - name: Build and test with Maven
-        run: mvn clean install
+        run: mvn clean install --file docker/backend/simple-api-student-main/
