--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,15 +35,48 @@ jobs:
         with:
           context: ./docker/backend/simple-api-student-main/
           tags: ${{secrets.DOCKERHUB_USERNAME}}/backendapi:latest
+
       - name: Build image and push database
         uses: docker/build-push-action@v3
         with:
           context: ./docker/database/
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/backendapi:latest
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/postgres-database:latest
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v3
         with:
           context: ./docker/httpd/website/
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/backendapi:latest
-     # DO the same for httpd
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/httpd:latest
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build image and push backend
+        uses: docker/build-push-action@v3
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: ./docker/backend/simple-api-student-main/
+          # Note: tags has to be all lower-case
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/backendapi:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v3
+        with:
+          context: ./docker/database/
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/postgres-database:latest
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/backendapi:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v3
+        with:
+          context: ./docker/httpd/website/
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/httpd:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+        
+
+
+
