--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,8 @@ jobs:
           distribution: 'adopt'
           
       - name: Build and test with Maven
-        run: mvn clean install --file docker/backend/simple-api-student-main/
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=NathanGlmt_DevOpsCourse -Dsonar.organization=nathanglmt -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file docker/backend/simple-api-student-main/
+
 
   build-and-push-docker-image:
     needs: test-backend
