--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,31 +1,13 @@
-name: CI devops 2024
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: 
+    branches:
       - main
-      - develop
-  pull_request:
 
 jobs:
-  test-backend: 
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2.5.0
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          
-      - name: Build and test with Maven
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=NathanGlmt_DevOpsCourse -Dsonar.organization=nathanglmt -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file docker/backend/simple-api-student-main/
-
-
   build-and-push-docker-image:
-    needs: test-backend
+    runs-on: ubuntu-22.04
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -54,7 +36,3 @@ jobs:
           context: ./docker/httpd/website/
           tags: ${{secrets.DOCKERHUB_USERNAME}}/httpd:latest
           push: ${{ github.ref == 'refs/heads/main' }}
-        
-
-
-
